--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,17 +5,21 @@
 </head>
 
 <body>
-<h1> Welcome to our store <h1>
+<center>
+<table style = "width:30%">
+<caption> Table 1 </caption>
+		<tr>
+			<th> Name </th>
+			<th> Description </th>
+			<th> Image </th>
+		</tr>
+		
+		<tr>
+			<td> Cat </td>
+			
+<h1> Welcome to our store </h1>
+<p> This is located at Makati City </p>
+</table>
+</center>
 </body>
-=======
-<!DOCTYPE html>
-<html>
-<head>
-<title> Ramos Fruits and Veggies</title>
-</head>
-
-<body>
-<h1> Welcome to our store <h1>
-</body>
->>>>>>> 85c4bf77bf3b6bba48d1889bef8c30020ed0146c
 </html>
