--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			
 <h1> Welcome to our store </h1>
 <p> This is located at Makati City </p>
-<a href=“http://www.umak.edu.ph”>This is a link</a>
+<a href=“https://www.umak.edu.ph”>This is a link</a>
 </table>
 </center>
 </body>
