--- a/Contact.html
+++ b/Contact.html
@@ -2,37 +2,50 @@
 <html>
 
 	<head>
-		<link rel="stylesheet" href="styleforContact.css">
+		<title> Contact Us </title>
+			<link rel="stylesheet" href="styleforContact.css">
 	</head>
 	
 	<body>
-	<section class="header">
+		<section class="header">
 			<nav>
 				<a href="Home.html"><img src="logo1.png"></a>
-				<div class="links">
-					
-					<a href="Home.html">HOME</a>
-					<a href="Products.html">PRODUCTS</a>
-					<a href="Contact.html">CONTACT US</a>
-				</div>
+					<div class="links">
+						<h1> RAMOS Fruits & Veggies</h1>
+							<a href="Home.html">HOME</a>
+							<a href="Products.html">PRODUCTS</a>
+							<a href="Contact.html">CONTACT US</a>
+					</div>
 			</nav>
 		</section>
+		
 		<div class="form">
-  <form action="/action_page.php" class="container">
-    <h1>Get in touch with us to and ask your questions</h1>
+			<form action="Confirmation Page.html" class="container">
+				<h1>Get in touch with us and ask questions</h1>
 
-    <label for="email"><b>Email</b></label>
-    <input type="text" placeholder="Enter Email" name="email" >
+				<label for="email"><b>Email</b></label>
+				<input type="text" placeholder="Enter Email" name="email" >
 
-    <label for="name"><b>Name</b></label>
-    <input type="text" placeholder="Name" name="name" >
+				<label for="name"><b>Name</b></label>
+				<input type="text" placeholder="Name" name="name" >
 	
-	<label for="message"><b>Your Message</b></label>
-    <input type="text" placeholder="Any suggestions?" name="message" >
+				<label for="message"><b>Your Message</b></label>
+				<input type="text" placeholder="Any suggestions?" name="message" >
 
-    <button type="submit" class="submitbtn">Submit</button>
-  </form>
-</div>
+				<button type="submit" class="submitbtn">Submit</button>
+			</form>
+			
+		</div>
+		<section>
+			<div class="about">
+				<h2> About Us</h2>
+			</div>
+		</section>
+		<div class="footer">
+			<h3> For more information message us at<br> <img src="fb logo.png" >
+			<a href="https://www.facebook.com/vicky.repia"> Facebook </a></h3>
+		</div>
+		
 	</body>
 	
 </html>
