--- a/Products.html
+++ b/Products.html
@@ -2,6 +2,7 @@
 <html>
 
 	<head>
+		<title> Products </title>
 		<link rel="stylesheet" href="styleforProducts.css">
 		<style>
 		table, th, td {
@@ -10,28 +11,27 @@
 		}
 		</style>
 	</head>
-		<center>
 		
 		<body>
-		<section class="header">
 			<nav>
 				<a href="Home.html"><img src="logo1.png"></a>
 				<div class="links">
-					
+					<h1> RAMOS Fruits & Veggies</h1>
 					<a href="Home.html">HOME</a>
 					<a href="Products.html">PRODUCTS</a>
 					<a href="Contact.html">CONTACT US</a>
+
 				</div>
 			</nav>
-		</section>
-		<section class="campus">
+		<hr>
+		
 		<h1 style="text-align:center;"> Products</h1>
 		
-		<table style="width:50%">
+		<table style="width:80%">
 	<caption>Monthly savings</caption>
 	<tr>
-		<th>Month</th>
-		<th>Savings</th>
+		<th>Products</th>
+		<th>Prices</th>
 	</tr>
 			<tr>
 				<td>January</td>
@@ -44,6 +44,10 @@
 				<td><img src= "orange.jpg" width="50" height="50" position:center></td>
 			</tr>
 			</table>
-			</center>
+			
+			<div class="footer">
+			<h3> For more information message us at<br> <img src="fb logo.png" >
+			<a href="https://www.facebook.com/vicky.repia"> Facebook </a></h3>
+			</div>
 		</body>
 </html>
