--- a/Products.html
+++ b/Products.html
@@ -4,12 +4,6 @@
 	<head>
 		<title> Products </title>
 		<link rel="stylesheet" href="styleforProducts.css">
-		<style>
-		table, th, td {
-		border: 1px solid black;
-		border-collapse: collapse;
-		}
-		</style>
 	</head>
 		
 		<body>
@@ -27,27 +21,75 @@
 		
 		<h1 style="text-align:center;"> Products</h1>
 		
-		<table style="width:80%">
-	<caption>Monthly savings</caption>
-	<tr>
-		<th>Products</th>
-		<th>Prices</th>
-	</tr>
+		
+		<table>
 			<tr>
-				<td>January</td>
-				<td>$100</td>
-				<td><img src= "banana.jpg" width="50" height="50" position:center></td>
+				<th>Products</th>
+				<th>Prices</th>
+				<th>Images</th>
 			</tr>
 			<tr>
-				<td>February</td>
-				<td>$50</td>
-				<td><img src= "orange.jpg" width="50" height="50" position:center></td>
+				<td>Saging na lakatan</td>
+				<td>₱70 per kilo</td>
+				<td><img src= "lakatan.jpg" width="200" height="100" ></td>
 			</tr>
+			<tr>
+				<td>Saging na saba</td>
+				<td>₱35 per kilo</td>
+				<td><img src= "saba.jpg" width="200" height="100" position:center></td>
+			</tr>
+			<tr>
+				<td>Seedless Grapes</td>
+				<td>₱200 per kilo</td>
+				<td><img src= "grapes.jpg" width="200" height="100" position:center></td>
+			</tr>
+			<tr>
+				<td>Orange</td>
+				<td>₱70 per kilo</td>
+				<td><img src= "orange.jpg" width="200" height="100" position:center></td>
+			</tr>
+			<tr>
+				<td>Melon</td>
+				<td>₱60 per piece</td>
+				<td><img src= "melon.jpg" width="200" height="100" position:center></td>
+			</tr>
+			<tr>
+				<td>Apple</td>
+				<td>₱35 per piece/₱100 for 3 pcs</td>
+				<td><img src= "apple.jpg" width="200" height="100" position:center></td>
+			</tr>
+			<tr>
+				<td>Hilaw na Mangga</td>
+				<td>₱70 per kilo</td>
+				<td><img src= "hilaw na mangga.jpg" width="200" height="100" position:center></td>
+			</tr>
+			<tr>
+				<td>Hinog na mangga</td>
+				<td>₱130 per kilo</td>
+				<td><img src= "mango.jpg" width="200" height="100" position:center></td>
+			</tr>
+			<tr>
+				<td>Sitaw</td>
+				<td>₱20 per tali</td>
+				<td><img src= "sitaw.jpg" width="200" height="100" position:center></td>
+			</tr>
+			<tr>
+				<td>Okra</td>
+				<td>₱10 per tali</td>
+				<td><img src= "okra.jpg" width="200" height="100" position:center></td>
+			</tr>
+			<tr>
+				<td>Puso ng saging</td>
+				<td>₱45 per piece</td>
+				<td><img src= "puso ng saging.jpg" width="200" height="100" "text-align:center"></td>
+			</tr>
+
 			</table>
 			
 			<div class="footer">
-			<h3> For more information message us at<br> <img src="fb logo.png" >
-			<a href="https://www.facebook.com/vicky.repia"> Facebook </a></h3>
+			<h4> For more information message us at<br> <img src="fb logo.png" >
+			<a href="https://www.facebook.com/vicky.repia"> Facebook </a></h4>
+			<p> ©Copyright 2022</p>
 			</div>
 		</body>
 </html>
